--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: chatty
+name: Flui
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -39,6 +39,15 @@ dependencies:
   cloud_firestore: ^5.6.6
   provider: ^6.1.4
   flutter_colorpicker: ^1.1.0
+  sliding_up_panel: ^2.0.0+1
+  animation_search_bar: ^0.0.10
+  flutter_slidable: ^4.0.0
+  connectivity_plus: ^6.1.3
+  intl: ^0.20.2
+  dartz: ^0.10.1
+  flutter_riverpod: ^2.6.1
+  
+  
  
 
 dev_dependencies:
@@ -64,8 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
